Add a rules with all parameters.

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -75,6 +75,7 @@ html(lang='en' ng-app='iFluxFrontendApp')
         script(src=contextRoot + '/js/controllers/ActionTargetCtrl.js')
         script(src=contextRoot + '/js/controllers/ActionTypeCtrl.js')
         script(src=contextRoot + '/js/controllers/EventSourceCtrl.js')
+        script(src=contextRoot + '/js/controllers/EventTypeCtrl.js')
         script(src=contextRoot + '/js/services/service.js')
         script(src=contextRoot + '/js/services/restService.js')
         script(src=contextRoot + '/js/services/sharedProperties.js')
