--- a/app/views/partials/actionTargetInstanceEditor.html
+++ b/app/views/partials/actionTargetInstanceEditor.html
@@ -65,7 +65,7 @@
         <div class="col-lg-12">
             <div class="buttonbar">
                 <a class="btn btn-primary" ng-click="cancel()">Cancel</a>
-                <a class="btn btn-primary" ng-click="submitForm()">{{buttonName}}</a>
+                <a class="btn btn-success" ng-click="submitForm()">{{buttonName}}</a>
             </div>
         </div>
     </div>
