--- a/app/views/partials/actionTargetTemplateEditor.html
+++ b/app/views/partials/actionTargetTemplateEditor.html
@@ -153,7 +153,7 @@
                 <div class="col-lg-12">
                     <div class="buttonbar">
                         <input class="btn btn-primary" type="button" ng-click="cancel()" value="Cancel">
-                        <input class="btn btn-primary" type="submit" ng-click="submitForm()" value="{{buttonName}}">
+                        <input class="btn btn-success" type="submit" ng-click="submitForm()" value="{{buttonName}}">
                     </div>
                 </div>
             </div>
