--- a/app/views/partials/eventTypeEditor.html
+++ b/app/views/partials/eventTypeEditor.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div id="page-content-wrapper">
-        <h1>iFLUX Action Type Editor</h1>
+        <h1>iFLUX Event Type Editor</h1>
 
         <div class="big-panel">
             <div name="atTemplateForm" id="atTemplateForm" novalidate>
@@ -12,8 +12,8 @@
                             <label for="NameType" class="col-sm-4 control-label">Name *</label>
 
                             <div class="col-sm-8"><input id="NameType" name="nameTemplate" type="text" class="form-control"
-                                                         placeholder="Name of the Action Type"
-                                                         ng-model="aType.name" required
+                                                         placeholder="Name of the Event Type"
+                                                         ng-model="eType.name" required
                                                          data-validation-required-message="Please enter a name">
 
                                 <p class="help-block text-danger"></p>
@@ -24,8 +24,8 @@
                             <label for="DescriptionType" class="col-sm-4 control-label">Description *</label>
 
                             <div class="col-sm-8"><input id="DescriptionType" name="descriptionType" type="text" class="form-control"
-                                                         placeholder="Description of the Action Type"
-                                                         ng-model="aType.description">
+                                                         placeholder="Description of the Event Type"
+                                                         ng-model="eType.description">
 
                             </div>
 
@@ -34,7 +34,7 @@
                             <label for="organizationSelect" class="col-sm-4 control-label">Organization </label>
 
                             <div class="col-sm-8">
-                                <ui-select id="organizationSelect" name="orgSelect0" ng-model="aType.organizationId" theme="bootstrap">
+                                <ui-select id="organizationSelect" name="orgSelect0" ng-model="eType.organizationId" theme="bootstrap">
                                     <ui-select-match placeholder="Select an organization">{{$select.selected.name}}</ui-select-match>
                                     <ui-select-choices repeat="organization.id as organization in organizations  | filter: { name: $select.search }" name="orgSelect2"
                                                        value="{{$select.selected.name}}">
@@ -47,11 +47,11 @@
 
 
                         <div class="form-group">
-                            <label for="templatePublic" class="col-sm-4 control-label">Make the action type public</label>
+                            <label for="templatePublic" class="col-sm-4 control-label">Make the event type public</label>
 
                             <div class="col-sm-8">
                                 <div>
-                                    <input id="templatePublic" ng-model="aType.public" type="checkbox">
+                                    <input id="templatePublic" ng-model="eType.public" type="checkbox">
                                 </div>
                             </div>
                         </div>
@@ -59,8 +59,8 @@
                             <label for="typeUrl" class="col-sm-4 control-label">Url </label>
 
                             <div class="col-sm-8"><input id="typeUrl" name="typeUrl" type="url" class="form-control"
-                                                         placeholder="Url to define the action type"
-                                                         ng-model="aType.type" required
+                                                         placeholder="Url to define the event type"
+                                                         ng-model="eType.type" required
                                                          data-validation-required-message="Please enter a valid type URL">
 
                                 <p class="help-block text-danger"></p>
