--- a/app/views/partials/userOrganizationEditor.html
+++ b/app/views/partials/userOrganizationEditor.html
@@ -24,7 +24,7 @@
         <div class="col-lg-12">
             <div class="buttonbar">
                 <a class="btn btn-primary" ng-click="cancel()">Cancel</a>
-                <a class="btn btn-primary" ng-click="submitForm()">Add user</a>
+                <a class="btn btn-success" ng-click="submitForm()">Add user</a>
             </div>
         </div>
     </div>
