Check all form if the field is required

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -64,7 +64,7 @@ html(lang='en' ng-app='iFluxFrontendApp')
         script(src=contextRoot + '/components/angular-ui-ace/ui-ace.js')
         script(src=contextRoot + '/components/ace-builds/src-min-noconflict/ext-language_tools.js')
 
-        script(src=contextRoot + '/vendors/js/jqBootstrapValidation.js')
+        // script(src=contextRoot + '/vendors/js/jqBootstrapValidation.js')
 
 
         script(src=contextRoot + '/js/app.js')
