--- a/app/views/partials/eventSourceInstanceEditor.html
+++ b/app/views/partials/eventSourceInstanceEditor.html
@@ -4,47 +4,51 @@
 
         <div class="big-panel">
             <div class="col-lg-12 form-horizontal">
-                <div class="col-lg-6">
-                    <h3>General Info</h3>
+                <form name="eventSourceInstanceForm">
+                    <div class="col-lg-6">
+                        <h3>General Info</h3>
 
-                    <div class="form-group">
-                        <label for="NameTemplate" class="col-sm-4 control-label">Name </label>
+                        <div class="form-group" show-errors>
+                            <label for="NameTemplate" class="col-sm-4 control-label">Name *</label>
 
-                        <div class="col-sm-8"><input id="NameTemplate" name="nameTemplate" type="text" class="form-control"
-                                                     placeholder="Name of the template"
-                                                     ng-model="esInstance.name" required>
+                            <div class="col-sm-8"><input id="NameTemplate" name="nameTemplate" type="text" class="form-control"
+                                                         placeholder="Name of the template"
+                                                         ng-model="esInstance.name" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="description" class="col-sm-4 control-label">Description </label>
+
+                            <div class="col-sm-8"><input id="description" name="description" type="text" class="form-control"
+                                                         placeholder="Human readable description"
+                                                         ng-model="esInstance.description">
+                            </div>
+                        </div>
+
+
+                        <div class="form-group" show-errors>
+                            <label for="organizationSelect" class="col-sm-4 control-label">Organization "</label>
+
+                            <div class="col-sm-8">
+                                <ui-select id="organizationSelect" name="orgSelect0" ng-model="esInstance.organizationId" theme="bootstrap" required>
+                                    <ui-select-match placeholder="Select an organization">{{$select.selected.name}}</ui-select-match>
+                                    <ui-select-choices repeat="organization.id as organization in organizations  | filter: { name: $select.search }" name="orgSelect2"
+                                                       value="{{$select.selected.name}}">
+                                        <div ng-bind-html="organization.name | highlight: $select.search"></div>
+                                    </ui-select-choices>
+                                </ui-select>
+                                <p class="help-block text-danger"></p>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label for="description" class="col-sm-4 control-label">Description </label>
-
-                        <div class="col-sm-8"><input id="description" name="description" type="text" class="form-control"
-                                                     placeholder="Human readable description"
-                                                     ng-model="esInstance.description">
-                        </div>
-                    </div>
-
-
-                    <div class="form-group">
-                        <label for="organizationSelect" class="col-sm-4 control-label">Organization </label>
-
-                        <div class="col-sm-8">
-                            <ui-select id="organizationSelect" name="orgSelect0" ng-model="esInstance.organizationId" theme="bootstrap" >
-                                <ui-select-match placeholder="Select an organization">{{$select.selected.name}}</ui-select-match>
-                                <ui-select-choices repeat="organization.id as organization in organizations  | filter: { name: $select.search }" name="orgSelect2" value="{{$select.selected.name}}">
-                                    <div ng-bind-html="organization.name | highlight: $select.search"></div>
-                                </ui-select-choices>
-                            </ui-select>
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                </div>
+                </form>
 
                 <div class="col-lg-6">
                     <h3>Schema</h3>
+
                     <div class="form-group">
                         <div class="col-sm-12">
-                            <label class="control-label">Complete the form below to configure the Event Source Instance </label>
+                            <label class="control-label">Complete the form below to configure the Event Source Instance *</label>
                             <hr>
                         </div>
 
