--- a/app/views/partials/register.html
+++ b/app/views/partials/register.html
@@ -15,37 +15,37 @@
                             <span></span>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" show-errors>
                             <label class="col-md-3 control-label">First Name</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" ng-model="credentials.firstName" name="firstname" placeholder="First name">
+                                <input required type="text" class="form-control" ng-model="credentials.firstName" name="firstname" placeholder="First name">
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" show-errors>
                             <label class="col-md-3 control-label">Last Name</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" ng-model="credentials.lastName" name="lastname" placeholder="Last name">
+                                <input required type="text" class="form-control" ng-model="credentials.lastName" name="lastname" placeholder="Last name">
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" show-errors>
                             <label class="col-md-3 control-label">Email</label>
                             <div class="col-md-9">
-                                <input type="email" class="form-control" ng-model="credentials.email" name="email" placeholder="Email Address">
+                                <input required type="email" class="form-control" ng-model="credentials.email" name="email" placeholder="Email Address">
                             </div>
                         </div>
 
 
-                        <div class="form-group">
+                        <div class="form-group" show-errors>
                             <label  class="col-md-3 control-label">Password</label>
                             <div class="col-md-9">
-                                <input type="password" class="form-control" ng-model="credentials.password" name="password" placeholder="Password">
+                                <input required type="password" class="form-control" ng-model="credentials.password" name="password" placeholder="Password">
                             </div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" show-errors>
                             <label  class="col-md-3 control-label">Password</label>
                             <div class="col-md-9">
-                                <input type="password" class="form-control" ng-model="credentials.passwordConfirmation" name="password" placeholder="Re-type your password">
+                                <input required type="password" class="form-control" ng-model="credentials.passwordConfirmation" name="password" placeholder="Re-type your password">
                             </div>
                         </div>
 
