--- a/app/views/partials/settings.html
+++ b/app/views/partials/settings.html
@@ -76,17 +76,18 @@
                         <h3>Add a new organization</h3>
                     </div>
                     <div class="col-lg-8">
-                        <div class="form-group">
-                            <label class="col-sm-3 control-label">Name </label>
+                        <form name="addOrgForm">
+                            <div class="form-group" show-errors>
+                                <label class="col-sm-3 control-label">Name "</label>
 
-                            <div class="col-sm-5"><input id="organizationName" name="organizationName" ng-minlength="5" type="text" class="form-control"
-                                                         placeholder="Name" ng-model="org.name">
+                                <div class="col-sm-5"><input id="organizationName" name="organizationName" ng-minlength="5" type="text" class="form-control"
+                                                             placeholder="Name" ng-model="org.name" required>
+                                </div>
+                                <div class="buttonbar col-sm-9 col-sm-offset-3">
+                                    <a class="btn btn-primary" ng-click="createOrganization(org.name)">Add a new organization</a>
+                                </div>
                             </div>
-                            <div class="buttonbar col-sm-9 col-sm-offset-3">
-                                <a class="btn btn-primary" ng-click="createOrganization(org.name)">Add a new organization</a>
-                            </div>
-                        </div>
-
+                        </form>
                     </div>
                 </div>
             </section>
