--- a/app/views/partials/signin.html
+++ b/app/views/partials/signin.html
@@ -13,16 +13,16 @@
 
                     <form id="loginform" class="form-horizontal" role="form" ng-submit="login()">
 
-                        <div style="margin-bottom: 25px" class="input-group">
+                        <div style="margin-bottom: 25px" class="input-group" show-errors>
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input id="login-username" type="text" class="form-control" ng-model="credentials.email" name="email" value=""
-                                   placeholder="email">
+                            <input id="login-username" type="email" class="form-control" ng-model="credentials.email" name="email"
+                                   placeholder="email" required>
                         </div>
 
-                        <div style="margin-bottom: 25px" class="input-group">
+                        <div style="margin-bottom: 25px" class="input-group" show-errors>
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                             <input id="login-password" type="password" class="form-control" ng-model="credentials.password" name="password"
-                                   placeholder="password">
+                                   placeholder="password" required>
                         </div>
 
 
