Check all form if the field is required

--- a/app/views/partials/ruleEditor.html
+++ b/app/views/partials/ruleEditor.html
@@ -10,7 +10,7 @@
                     <div class="form-group" show-errors>
                         <label for="descriptionRules" class="col-sm-2 control-label">Name *</label>
 
-                        <div class="col-sm-10"><input id="descriptionRules" name="Description" type="text" class="form-control"
+                        <div class="col-sm-10"><input id="descriptionRules" name="name" type="text" class="form-control"
                                                       placeholder="Describe what the rule is supposed to do."
                                                       ng-model="payload.name" required>
                         </div>
@@ -260,6 +260,5 @@
                 </div>
             </div>
         </div>
-        {{payload}}
     </div>
 </div>
