--- a/app/views/partials/rulesManagment.html
+++ b/app/views/partials/rulesManagment.html
@@ -17,7 +17,7 @@
                     <td>{{rule.name}}</td>
                     <td>{{rule.enabled}}</td>
                     <td><a class="btn btn-xs btn-primary" ng-href="#/ruleEditor/{{rule.id}}">Modification </a></td>
-                    <td><a class="btn btn-xs btn-primary" ng-disabled="true" ng-click="delete(rule.id, $index)">Delete </a></td>
+                    <td><a class="btn btn-xs btn-danger" ng-disabled="true" ng-click="delete(rule.id, $index)">Delete </a></td>
                 </tr>
                 </tbody>
             </table>
