--- a/app/views/partials/actionTargetTemplateEditor.html
+++ b/app/views/partials/actionTargetTemplateEditor.html
@@ -152,6 +152,12 @@
 
 
                 <div class="col-lg-12">
+                    <div class="alert alert-danger fade in" ng-hide="!errorMessages">
+                        <div ng-repeat="errorMessage in errorMessages">
+                            <a href="#" class="close" data-dismiss="alert">&times;</a>
+                            <strong>Error!</strong> {{errorMessage}}
+                        </div>
+                    </div>
                     <div class="buttonbar">
                         <input class="btn btn-primary" type="button" ng-click="cancel()" value="Cancel">
                         <input class="btn btn-success" type="submit" ng-click="submitForm()" value="{{buttonName}}">
