--- a/app/views/partials/eventSourceInstanceEditor.html
+++ b/app/views/partials/eventSourceInstanceEditor.html
@@ -69,6 +69,12 @@
         </div>
 
         <div class="col-lg-12">
+            <div class="alert alert-danger fade in" ng-hide="!errorMessages">
+                <div ng-repeat="errorMessage in errorMessages">
+                    <a href="#" class="close" data-dismiss="alert">&times;</a>
+                    <strong>Error!</strong> {{errorMessage}}
+                </div>
+            </div>
             <div class="buttonbar">
                 <a class="btn btn-primary" ng-click="cancel()">Cancel</a>
                 <a class="btn btn-success" ng-click="submitForm()">{{buttonName}}</a>
