--- a/app/views/partials/eventSourceTemplateEditor.html
+++ b/app/views/partials/eventSourceTemplateEditor.html
@@ -123,6 +123,12 @@
 
 
             <div class="col-lg-12">
+                <div class="alert alert-danger fade in" ng-hide="!errorMessages">
+                    <div ng-repeat="errorMessage in errorMessages">
+                        <a href="#" class="close" data-dismiss="alert">&times;</a>
+                        <strong>Error!</strong> {{errorMessage}}
+                    </div>
+                </div>
                 <div class="buttonbar">
                     <a class="btn btn-primary" type="button" ng-click="cancel()">Cancel</a>
                     <a class="btn btn-success" type="submit" ng-click="submitForm()">{{buttonName}}</a>
