--- a/app/views/partials/ruleEditor.html
+++ b/app/views/partials/ruleEditor.html
@@ -255,6 +255,12 @@
             </form>
             <div class="col-lg-12">
                 <div class="buttonbar">
+                    <div class="alert alert-danger fade in" ng-hide="!errorMessages">
+                        <div ng-repeat="errorMessage in errorMessages">
+                            <a href="#" class="close" data-dismiss="alert">&times;</a>
+                            <strong>Error!</strong> {{errorMessage}}
+                        </div>
+                    </div>
                     <input class="btn btn-primary" type="button" ng-click="cancel()" value="Cancel">
                     <a class="btn btn-success" ng-click="create()">{{buttonName}}</a>
                 </div>
