--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -131,3 +131,11 @@ html
 
 .js-editor-medium
   height 180px
+.tooltip.tooltipCustomWidth .tooltip-inner
+  max-width 500px
+  width 500px
+  text-align left
+
+.tooltip.tooltipCustomWidth .tooltip-arrow {
+  display none
+  }
