--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -21,7 +21,6 @@ html(lang='en' ng-app='iFluxFrontendApp')
             link(href=contextRoot + '/components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css' rel='stylesheet')
             link(href=contextRoot + '/components/fontawesome/css/font-awesome.min.css' rel='stylesheet')
             link(href=contextRoot + '/components/angular-ui-select/dist/select.min.css' rel='stylesheet')
-
             link(rel='stylesheet', href='/css/style.css')
 
             //- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
@@ -63,6 +62,7 @@ html(lang='en' ng-app='iFluxFrontendApp')
         script(src=contextRoot + '/components/ace-builds/src-min-noconflict/ace.js')
         script(src=contextRoot + '/components/angular-ui-ace/ui-ace.js')
         script(src=contextRoot + '/components/ace-builds/src-min-noconflict/ext-language_tools.js')
+        script(src=contextRoot + '/components/angular-bootstrap/ui-bootstrap-tpls.min.js')
 
         // script(src=contextRoot + '/vendors/js/jqBootstrapValidation.js')
 
