--- a/app/views/partials/actionTargetInstanceEditor.html
+++ b/app/views/partials/actionTargetInstanceEditor.html
@@ -73,7 +73,7 @@
             </div>
             <div class="buttonbar">
                 <a class="btn btn-primary" ng-click="cancel()">Cancel</a>
-                <a class="btn btn-success" ng-click="submitForm()">{{buttonName}}</a>
+                <a class="btn btn-success" ng-click="submitForm()" ng-disabled="actionTargetInstanceForm.$invalid">{{buttonName}}</a>
             </div>
         </div>
     </div>
