--- a/app/views/partials/actionTargetTemplateEditor.html
+++ b/app/views/partials/actionTargetTemplateEditor.html
@@ -160,7 +160,7 @@
                     </div>
                     <div class="buttonbar">
                         <input class="btn btn-primary" type="button" ng-click="cancel()" value="Cancel">
-                        <input class="btn btn-success" type="submit" ng-click="submitForm()" value="{{buttonName}}">
+                        <input class="btn btn-success" type="submit" ng-click="submitForm()" ng-disabled="atTemplateForm.$invalid || atTemplateForm2.$invalid" value="{{buttonName}}">
                     </div>
                 </div>
             </div>
