--- a/app/views/partials/eventSourceInstanceEditor.html
+++ b/app/views/partials/eventSourceInstanceEditor.html
@@ -77,7 +77,7 @@
             </div>
             <div class="buttonbar">
                 <a class="btn btn-primary" ng-click="cancel()">Cancel</a>
-                <a class="btn btn-success" ng-click="submitForm()">{{buttonName}}</a>
+                <a class="btn btn-success" ng-click="submitForm()" ng-disabled="eventSourceInstanceForm.$invalid">{{buttonName}}</a>
             </div>
         </div>
     </div>
