--- a/app/views/partials/eventTypeEditor.html
+++ b/app/views/partials/eventTypeEditor.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="buttonbar">
                         <input class="btn btn-primary" type="button" ng-click="cancel()" value="Cancel">
-                        <input class="btn btn-success" type="submit" ng-click="submitForm()" value="{{buttonName}}">
+                        <input class="btn btn-success" type="submit" ng-click="submitForm()" ng-disabled="eventTypeForm.$invalid" value="{{buttonName}}">
                     </div>
                 </div>
             </div>
