--- a/app/views/partials/ruleEditor.html
+++ b/app/views/partials/ruleEditor.html
@@ -39,8 +39,6 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="col-lg-12 form-horizontal">
                     <h3>Conditions</h3>
 
@@ -56,9 +54,7 @@
                                                                           ng-model="condition.description">
                                             </div>
                                             <button type="button" class="btn btn-danger" ng-click="removeConditions($index)">Delete</button>
-
                                         </div>
-
                                     </div>
 
                                     <div class="form-group">
@@ -89,7 +85,7 @@
                                     </div>
 
                                     <div class="form-group" show-errors>
-                                        <label class="col-sm-4">JS expression</label>
+                                        <label class="col-sm-4" tooltip-html="htmlTooltipCondition" tooltip-class="tooltipCustomWidth">JS expression </label>
 
                                         <div class="col-sm-8">
                                             <div class="js-editor-small">
@@ -125,15 +121,12 @@
                         </div>
                     </div>
                     <div>
-
                         <button type="button" class="btn btn-success" ng-click="addConditions()">Add a condition</button>
-
                     </div>
                 </div>
 
                 <div class="col-lg-12 form-horizontal">
                     <h3>Transformations</h3>
-
 
                     <div ng-repeat="transformation in payload.transformations">
 
@@ -148,7 +141,6 @@
                                             </div>
                                             <button type="button" class="btn btn-danger" ng-click="removeTransformations($index)">Delete</button>
                                         </div>
-
                                     </div>
 
                                     <div class="form-group" show-errors>
@@ -192,9 +184,8 @@
                                             </ui-select>
                                         </div>
                                     </div>
-
                                     <div class="form-group" show-errors>
-                                        <label class="col-sm-4">JS expression *</label>
+                                        <label class="col-sm-4" tooltip-html="htmlTooltipTransformation" tooltip-class="tooltipCustomWidth">JS expression *</label>
 
                                         <div class="col-sm-8">
                                             <div class="js-editor-small">
@@ -208,10 +199,9 @@
                                             </div>
                                             <p class="help-block text-danger"></p>
                                         </div>
-
                                     </div>
                                     <div class="form-group" show-errors>
-                                        <label class="col-sm-4">Write a JSON example *</label>
+                                        <label class="col-sm-4">Write a JSON sample *</label>
 
                                         <div class="col-sm-8">
                                             <div class="js-editor-small">
@@ -246,11 +236,8 @@
                         </div>
                     </div>
                     <div>
-
                         <button type="button" class="btn btn-success" ng-click="addTransformations()">Add a transformation</button>
-
                     </div>
-
                 </div>
             </form>
             <div class="col-lg-12">
