Fixed styling issue

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -21,7 +21,7 @@ html(lang='en' ng-app='iFluxFrontendApp')
             link(href=contextRoot + '/components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css' rel='stylesheet')
             link(href=contextRoot + '/components/fontawesome/css/font-awesome.min.css' rel='stylesheet')
             link(href=contextRoot + '/components/angular-ui-select/dist/select.min.css' rel='stylesheet')
-            link(rel='stylesheet', href='/css/style.css')
+            link(rel='stylesheet', href=contextRoot + '/css/style.css')
 
             //- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
             <!--[if lt IE 9]>
