--- a/app/views/partials/actionTypeEditor.jade
+++ b/app/views/partials/actionTypeEditor.jade
@@ -19,21 +19,13 @@
                                 label.col-sm-4.control-label(for="DescriptionType") Description
                                 .col-sm-8
                                     input#DescriptionType.form-control(type="text", name="descriptionType", placeholder="Description of the Action Type", ng-model="aType.description")
-                            .form-group(show-errors="")
-                                label.col-sm-4.control-label(for="organizationSelect") Organization *
-                                .col-sm-8
-                                    ui-select#organizationSelect(name="orgSelect0", ng-model="aType.organizationId", theme="bootstrap", required="")
-                                        ui-select-match(placeholder="Select an organization") {{$select.selected.name}}
-                                        ui-select-choices(repeat="organization.id as organization in organizations  | filter: { name: $select.search }", name="orgSelect2", value="{{$select.selected.name}}")
-                                            div(ng-bind-html="organization.name | highlight: $select.search")
-                                    p.help-block.text-danger
                             .form-group
                                 label.col-sm-4.control-label(for="templatePublic") Make the action type public
                                 .col-sm-8
                                     div
                                         input#templatePublic(type="checkbox", ng-model="aType.public")
                             .form-group(show-errors="")
-                                label.col-sm-4.control-label(for="typeUrl") Url *
+                                label.col-sm-4.control-label(for="typeUrl") Type (url) *
                                 .col-sm-8
                                     input#typeUrl.form-control(type="url", name="typeUrl", placeholder="Url to define the action type", ng-model="aType.type", required="")
                                     p.help-block.text-danger
