--- a/app/views/partials/actionTargetManagement.jade
+++ b/app/views/partials/actionTargetManagement.jade
@@ -5,7 +5,7 @@
     #page-content-wrapper
         h1 iFLUX Action Target Managment
         .col-lg-12
-            | Search an Action Target Template:
+            | Search an Action Target Templates
             input(type="text", ng-model="search")
             table.table.table-condensed
                 thead
