--- a/app/views/partials/cockpit.jade
+++ b/app/views/partials/cockpit.jade
@@ -22,7 +22,7 @@ section
                     span.fa-stack.fa-4x.text-primary
                         i.fa.fa-square.fa-stack-2x
                         i.fa.fa-bell.fa-stack-1x.fa-inverse
-                h4.service-heading Source Event
+                h4.service-heading Event Source Templates
         br
         .row.text-center
             .col-md-4
@@ -30,4 +30,4 @@ section
                     span.fa-stack.fa-4x.text-primary
                         i.fa.fa-square.fa-stack-2x
                         i.fa.fa-bullseye.fa-stack-1x.fa-inverse
-                h4.service-heading Action Target
+                h4.service-heading Action Target Templates
