--- a/app/views/partials/eventSourceManagement.jade
+++ b/app/views/partials/eventSourceManagement.jade
@@ -5,7 +5,7 @@
     #page-content-wrapper
         h1 iFLUX Event Source Managment
         .col-lg-12
-            | Search an Event Source Template:
+            | Search an Event Source Templates
             input(type="text", ng-model="search")
             table.table.table-condensed
                 thead
