--- a/app/views/navigation.jade
+++ b/app/views/navigation.jade
@@ -13,22 +13,23 @@ nav.navbar.navbar-default.navbar-fixed-top(data-ng-controller='AuthCtrl')
         .navbar-collapse.collapse#navbar
             ul.nav.navbar-nav
                 li(ng-hide='isAuthenticate'): a(ng-href='#/home') Home
-                li(ng-show='isAuthenticate'): a(ng-href='#/cockpit') Cockpit
-                li(ng-show='isAuthenticate'): a(ng-href='#/rules') Rules
                 li(ng-hide='isAuthenticate'): a(ng-href='#/signin') Sign in
                 li(ng-hide='isAuthenticate'): a(ng-href='#/register') Register
+                li(ng-show='isAuthenticate'): a(ng-href='#/cockpit') Cockpit
                 li(ng-show='isAuthenticate'): a(ng-href='#/settings') Settings
+                li(ng-show='isAuthenticate'): a(ng-href='#/rules') Rules
+
                 li.dropdown(ng-show='isAuthenticate')
                     a.dropdown-toggle(ng-href='' data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false") Actions
                         span.caret
                     ul.dropdown-menu
-                        li: a(ng-href='#/actionTarget') Action Target
+                        li: a(ng-href='#/actionTarget') Action Target Templates
                         li: a(ng-href='#/actionType') Action Type
                 li.dropdown(ng-show='isAuthenticate')
                     a.dropdown-toggle(ng-href='' data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false") Events
                         span.caret
                     ul.dropdown-menu
-                        li: a(ng-href='#/eventSource') Event Source
+                        li: a(ng-href='#/eventSource') Event Source Templates
                         li: a(ng-href='#/eventType') Event Type
                 li(ng-show='isAuthenticate'): a(ng-click='logout()') Sign out
 
